--- a/nshm_inversion/solvis/pyproject.toml
+++ b/nshm_inversion/solvis/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "solvis"
-version = "0.11.0"
+name = "otago-srm-solvis"
+version = "0.1.0"
 description = "analysis of opensha modular solution files."
 authors = ["Chris Chamberlain <chrisbc@artisan.co.nz>"]
 license = "AGPL3"
-readme = "README.md"
+readme = "ReadMe.md"
 classifiers=[
     'Development Status :: 2 - Pre-Alpha',
     'Intended Audience :: Developers',
@@ -15,10 +15,7 @@ classifiers=[
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10'
 ]
-packages = [
-	{include = "solvis"},
-    {include = "test", format = "sdist" }
-]
+packages = []
 
 [tool.poetry.scripts]
 cli = 'scripts.cli:cli'
@@ -36,9 +33,7 @@ pyvista = {version = "^0.37.0", optional = true, extras = ["vtk"]}
 
 # see https://github.com/orgs/python-poetry/discussions/7937
 urllib3 = "<2" 
-geopandas = "^0.13.2"
-numpy = "<1.25"
-nzshm-model = "0.4.0"
+solvis = {git = "https://github.com/GNS-Science/solvis.git", rev = "1cbdb91075b96a0b4bd2ab384d0ba9c70894b417"}
 
 [tool.poetry.group.dev.dependencies]
 black  = { version = "^22.3"}
@@ -49,7 +44,6 @@ flake8-docstrings = { version = "^1.6.0", optional = true }
 pytest = { version = "^6.2.4"}
 pytest-cov  = { version = "^2.12.0"}
 twine = "^4.0.2"
-nzshm-common = "^0.4.0"
 matplotlib = "^3.6.3"
 tox = "^4.4.4"
 ipython = "^8.11.0"
