--- a/nshm_inversion/solvis/pyproject.toml
+++ b/nshm_inversion/solvis/pyproject.toml
@@ -34,6 +34,7 @@ pyvista = {version = "^0.37.0", optional = true, extras = ["vtk"]}
 # see https://github.com/orgs/python-poetry/discussions/7937
 urllib3 = "<2" 
 solvis = {git = "https://github.com/GNS-Science/solvis.git", rev = "1cbdb91075b96a0b4bd2ab384d0ba9c70894b417"}
+gdal = "3.8"
 
 [tool.poetry.group.dev.dependencies]
 black  = { version = "^22.3"}
