--- a/nshm_inversion/solvis/pyproject.toml
+++ b/nshm_inversion/solvis/pyproject.toml
@@ -8,14 +8,14 @@ packages = []
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
-solvis = {git = "https://github.com/GNS-Science/solvis.git", rev = "1cbdb91075b96a0b4bd2ab384d0ba9c70894b417"}
 gdal = "3.8"
-nzshm-model = "^0.10.6"
 pyproj = "^3.7"
 shapely = "^2.0.6"
 numpy = "^2.2"
 pandas = "^2.2.3"
 geopandas = "^1.0.1"
+nzshm-model = "^0.13.6"
+solvis = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
